# COINjecture2.0

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  AUDIT_FIXES_APPLIED.md  CHANGELOG.md  CODEBASE_ANALYSIS_SUMMARY.md  CODE_OF_CONDUCT.md  COINJECTURE-DNS-SETUP.md  CONTRIBUTING.md  CURRENT_ISSUES.md  CURRENT_ISSUES_V4.8.4.md  Cargo.toml  Cross.toml  DEPLOYMENT_INSTRUCTIONS.md  DIMENSIONLESS_EQUILIBRIUM_AUDIT.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.adzdb  Dockerfile.api  Dockerfile.cpp  Dockerfile.updated  FORMULA_COMPLIANCE_REPORT_V5.md  GCE_VM_SYNC_ISSUE_ASSESSMENT.md  HTTPS-DOMAIN-SETUP.md  LICENSE  MANUAL_DEPLOYMENT_GUIDE.md  MEMORY_OPTIMIZATION.md  PRIVACY_MARKETPLACE_IMPLEMENTATION.md  README.md  SECURITY.md  SOURCE_FILES_REFERENCE.md  TESTNET_GUIDE.md  TESTNET_QUICKSTART.md  TEST_QUICK_START.md  TRANSACTION_TEST_GUIDE.md  UNIDIRECTIONAL_CONNECTIVITY_FIX.md  UNIDIRECTIONAL_CONNECTIVITY_FULL_DIAGNOSIS.md  bootstrap-node.bat  (+17 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: api-server-ci.yml  ci.yml  release.yml
.systemx/: README.md
.systemx/ci-cd/: README.md
.systemx/docs/: README.md
.systemx/helpers/: README.md
.systemx/logs/: README.md
.systemx/plans/: README.md  architecture-review.md  executive-summary.md  launch-checklist.md  production-readiness-plan.md  roadmap.md
.systemx/scripts/: README.md
.systemx/security/: README.md
.systemx/status/: README.md
.systemx/tests/: README.md
.systemx/todos/: README.md
adzdb/: Cargo.toml
adzdb/src/: lib.rs
api-server/: .env.example  Cargo.toml
api-server/src/: config.rs  crypto.rs  errors.rs  jwt.rs  lib.rs  main.rs  metrics.rs  node_poller.rs  node_rpc.rs  nonce_store.rs  siwb.rs  sse.rs  supabase.rs
api-server/src/indexer/: event_processor.rs  mod.rs  service.rs  sync_state.rs
api-server/src/matching/: engine.rs  mod.rs  order_book.rs  outbox.rs  types.rs
api-server/src/middleware/: cors.rs  jwt_auth.rs  mod.rs  rate_limit.rs  tracing.rs
api-server/src/routes/: admin.rs  auth.rs  chain.rs  email_auth.rs  events.rs  health.rs  jsonrpc_proxy.rs  marketplace.rs  mod.rs  peers.rs
api-server/tests/: auth_flow.rs  email_auth_flow.rs
bootstrap/: chain.db  state.db
consensus/: Cargo.toml
consensus/benches/: consensus_bench.rs
consensus/src/: difficulty.rs  lib.rs  miner.rs  problem_registry.rs  work_score.rs
consensus/src/coordinator/: commit.rs  config.rs  epoch.rs  leader.rs  mod.rs
consensus/tests/: consensus_property_tests.rs
core/: Cargo.toml
core/benches/: block_bench.rs  crypto_bench.rs
core/src/: block.rs  commitment.rs  crypto.rs  dimensional.rs  error.rs  fixed_point.rs  golden.rs  lib.rs  privacy.rs  problem.rs  transaction.rs  validation.rs
core/tests/: property_tests.rs  unit_tests.rs
docker/archive/: Dockerfile.local  Dockerfile.mesh  Dockerfile.v4716
docs/: ARCHITECTURE.md  BOOTSTRAP.md  BRIDGE_PROTOCOL.md  CPP_DEPLOYMENT.md  CPP_PHASE3_PLAN.md  CPP_PROTOCOL.md  GETTING_STARTED.md  GOLDENSEED_SPEC_v1.md  GOVERNANCE.md  LOAD_TESTING.md  PHASE3_WEBSOCKET_TEMPLATE.md  PROTOCOL_CHANGELOG.md  PROTOCOL_UPGRADE_PROCEDURE.md  TROUBLESHOOTING.md  VALIDATION_P2P_REGRESSION.md
docs/api/: AUTH.md  CHANGELOG.md  ERROR_CODES.md  RATE_LIMITS.md  SDK_EXAMPLES.md  VERSIONING.md  WEBSOCKET.md  openrpc.json  postman_collection.json
docs/archive/: AUDIT_REPORT.md  (+36 more)
huggingface/: Cargo.toml  README.md
huggingface/src/: client.rs  energy.rs  lib.rs  metrics.rs  serialize.rs  streamer.rs
lambda-edge-rpc-proxy/: README.md  deploy.sh  index.js  package.json
load-test/: Cargo.toml
load-test/src/: large_block.rs  main.rs  mempool_flood.rs  monitor.rs  network_stress.rs  results.rs  rpc_load.rs  stability.rs  tx_generator.rs
marketplace-export/: Cargo.toml
mempool/: Cargo.toml
mobile-sdk/: Cargo.toml  README.md
mobile-sdk/src/: lib.rs
monitoring/: alerts.yml  prometheus.yml
network/: Cargo.toml
network/examples/: mesh_node.rs
network/src/: addr_filter.rs  discovery.rs  eclipse.rs  encrypted_connection.rs  lib.rs  noise.rs  noise_identity.rs  peer_scoring.rs  peer_store.rs  pex.rs  protocol.rs  reputation.rs  security.rs  sync_guardrails.rs
network/src/cpp/: block_provider.rs  config.rs  encryption.rs  flock.rs  flow_control.rs  message.rs  mod.rs  network.rs  node_integration.rs  peer.rs  protocol.rs  router.rs  version.rs
network/src/mesh/: bridge.rs  config.rs  connection.rs  error.rs  gossip.rs  identity.rs  mod.rs  peer_manager.rs  protocol.rs  router.rs  transport.rs
network/src/mesh/tests/: connection_tests.rs  gossip_tests.rs  integration.rs  mod.rs
network/tests/: bridge_e2e.rs  chain_agreement.rs  coordinator_e2e.rs  cpp_e2e_tests.rs  cpp_network_tests.rs  cpp_protocol_tests.rs  cpp_two_node_sync.rs  testnet_integration.rs
node/: Cargo.toml
node/src/: chain.rs  chain_adzdb.rs  config.rs  faucet.rs  genesis.rs  keystore.rs  lib.rs  light_client.rs  light_sync.rs  main.rs  metrics.rs  metrics_integration.rs  metrics_server.rs  mobile_sdk.rs  node_manager.rs  node_types.rs  peer_consensus.rs  service.rs  sync_optimizer.rs  validator.rs
node/src/service/: block_processing.rs  fork.rs  merkle.rs  mining.rs  mod.rs
node/tests/: integration_suite.rs  node_types_integration.rs
proofs/: README.md
rpc/: Cargo.toml
rpc/src/: lib.rs  middleware.rs  server.rs  tls.rs  websocket.rs
rpc/tests/: websocket_rpc_tests.rs
scripts/: build-docker.sh  ci-smoke-test.sh  create_problem_datasets.py  dev-local-web-api.sh  nginx-api-subdomain.example.conf  setup-https-coinjecture.sh  setup-https-rpc-caddy.sh  setup-https-rpc-nginx.sh  setup-https-rpc-selfsigned.sh  setup_v5_dataset.py  start-stack.sh  supabase-login-and-link.sh  test-local-cpp.sh  upload_readme.py
state/: Cargo.toml
state/src/: accounts.rs  accounts_adzdb.rs  channels.rs  dimensional_pools.rs  escrows.rs  lib.rs  marketplace.rs  timelocks.rs  trustlines.rs
state/tests/: privacy_marketplace_tests.rs
supabase/: config.toml
wallet/: Cargo.toml
web-wallet/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+254 files in other folders)
