[package]
name = "adzdb"
version = "0.1.0"
edition = "2021"
authors = ["COINjecture Team"]
description = "Append-only Deterministic Zero-copy Database for blockchain"
license = "MIT"
repository = "https://github.com/beanapologist/COINjecture-NetB-Updates"

[dependencies]
# Cryptographic hashing
sha2 = "0.10"

# Memory-mapped I/O (optional, for zero-copy reads)
memmap2 = { version = "0.9", optional = true }

# Async support (optional)
tokio = { version = "1", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[features]
default = ["mmap"]
mmap = ["memmap2"]
async = ["tokio"]

[[bench]]
name = "adzdb_bench"
harness = false

