[package]
name = "adzdb"
version = "0.1.0"
edition = "2021"
authors = ["COINjecture Team"]
description = "Append-only Deterministic Zero-copy Database for blockchain"
license = "MIT"
repository = "https://github.com/beanapologist/COINjecture-NetB-Updates"

[dependencies]
# None needed - pure Rust implementation using std::fs

[dev-dependencies]
tempfile = "3"
