[package]
name = "coinjecture-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coinjecture-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Auth (for SIWB)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
blake3.workspace = true
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Rate limiting
governor = "0.7"

# In-memory nonce store
dashmap = "6"

# Matching engine
rust_decimal = { version = "1", features = ["serde-with-str"] }

# SSE streaming
async-stream = "0.3"
tokio-stream = "0.1"

# Supabase client + node JSON-RPC proxy
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"

# Internal crates (wire up later)
# coinject-core = { path = "../core" }

[dev-dependencies]
http-body-util = "0.1"
