[package]
name = "coinject-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bench]]
name = "consensus_bench"
harness = false

[dependencies]
coinject-core = { path = "../core" }
coinject-tokenomics = { path = "../tokenomics" }
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
rand.workspace = true
bincode.workspace = true
hex.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true

[features]
# Allow unsigned (all-zero pubkey) commits during the migration window.
# MUST be disabled for mainnet once all nodes sign their commits.
allow-unsigned-commits = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
