[package]
name = "coinject-mobile-sdk"
version = "0.1.0"
authors = ["COINjecture Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Quigles1337/GITHUB-SUCKS"
description = "Lightweight mobile SDK for COINjecture light clients (WASM/iOS/Android)"
keywords = ["blockchain", "light-client", "wasm", "mobile"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "coinject_mobile"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

# WASM-specific dependencies (only included for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
# Enable WASM features
wasm = []
# Enable C-FFI exports
ffi = []
# Enable all platform targets
all-platforms = ["wasm", "ffi"]

[profile.release]
# Optimize for size (important for mobile)
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "s"

# WASM-specific profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"  # Even more size optimization for WASM
