[package]
name = "coinject-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
# libp2p removed - CPP is now the sole networking protocol
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
blake3.workspace = true
futures.workspace = true
rand.workspace = true
chrono.workspace = true
