[package]
name = "coinject-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
# libp2p removed - CPP is now the sole networking protocol
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
blake3.workspace = true
futures.workspace = true
rand.workspace = true
chrono.workspace = true
tracing.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
sha2.workspace = true
lru.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
hex.workspace = true
serde_json.workspace = true
dashmap = "6"

# Noise Protocol Framework for formally-compliant encrypted transport
snow = "0.9"

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Tests create unsigned commits via the bridge (NodeCommit has no public_key field yet),
# so network integration tests always use allow-unsigned-commits.
coinject-consensus = { path = "../consensus", features = ["allow-unsigned-commits"] }
tempfile = "3"
