[package]
name = "coinject-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "coinject"
path = "src/main.rs"

[dependencies]
coinject-core = { path = "../core" }
coinject-consensus = { path = "../consensus" }
coinject-network = { path = "../network" }
coinject-state = { path = "../state" }
coinject-mempool = { path = "../mempool" }
coinject-rpc = { path = "../rpc" }
coinject-tokenomics = { path = "../tokenomics" }
coinject-huggingface = { path = "../huggingface" }
adzdb = { path = "../adzdb", optional = true }

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
redb.workspace = true
thiserror.workspace = true
bincode.workspace = true
hex.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

# Cryptography for validator keys
ed25519-dalek = "2.1"
blake3 = "1.5"
rand = "0.8"
bs58 = "0.5"
sha2 = "0.10"

[features]
default = []
# Use ADZDB for both chain and state storage (avoids Windows file locking issues)
adzdb = ["dep:adzdb", "coinject-state/adzdb"]

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
jsonrpsee.workspace = true
serde_json.workspace = true
