[package]
name = "coinject-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
coinject-state = { path = "../state" }
coinject-mempool = { path = "../mempool" }
jsonrpsee.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }

[dev-dependencies]
adzdb = { path = "../adzdb" }
redb.workspace = true
