[package]
name = "coinject-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
coinject-state = { path = "../state" }
coinject-mempool = { path = "../mempool" }
jsonrpsee.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
tower = { version = "0.4.13", features = ["timeout", "util"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tokio-tungstenite = "0.21"
futures = "0.3"
chrono.workspace = true
tracing.workspace = true
uuid = { version = "1.23", features = ["v4"] }
blake3.workspace = true
bytes.workspace = true
dashmap.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
adzdb = { path = "../adzdb" }
redb.workspace = true
