[package]
name = "coinject-state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Use ADZDB for state storage (avoids Windows file locking issues)
adzdb = []

[dependencies]
coinject-core = { path = "../core" }
redb.workspace = true
serde.workspace = true
bincode.workspace = true
chrono.workspace = true
thiserror.workspace = true
# Ed25519 escrow authorization (P0 security)
ed25519-dalek.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile = "3.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
